[gd_scene load_steps=10 format=3 uid="uid://e7kc0ybm3f6w"]

[ext_resource type="Script" path="res://scripts/penny_3d.gd" id="1_5juj5"]
[ext_resource type="Texture2D" uid="uid://cvfg4fv20riaq" path="res://assets/sprites/coins/1p/1p_obverse_new.png" id="2_6gl1j"]
[ext_resource type="Texture2D" uid="uid://dnh5x4dgu4a1r" path="res://assets/sprites/coins/1p/1p_obverse_old.png" id="3_hog83"]
[ext_resource type="Script" path="res://scripts/rotate_with_camera.gd" id="4_1ood3"]
[ext_resource type="Texture2D" uid="uid://bythgusp6t7go" path="res://assets/sprites/coins/1p/1p_rim_new.png" id="5_7sn2l"]
[ext_resource type="Texture2D" uid="uid://cwtjyhox5mrvd" path="res://assets/sprites/coins/1p/1p_rim_old.png" id="6_rfhdw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_31kwp"]
rough = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r56ou"]
margin = 0.0
height = 0.2
radius = 1.015

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rlgvo"]
transparency = 1
albedo_color = Color(0, 0.4, 1, 0.364706)

[node name="Penny3D" type="RigidBody3D"]
collision_layer = 4
collision_mask = 7
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
mass = 3560.0
physics_material_override = SubResource("PhysicsMaterial_31kwp")
script = ExtResource("1_5juj5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
shape = SubResource("CylinderShape3D_r56ou")

[node name="FaceSpriteContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.082, 0)

[node name="FaceNew" type="Sprite3D" parent="FaceSpriteContainer"]
texture = ExtResource("2_6gl1j")

[node name="FaceOld" type="Sprite3D" parent="FaceSpriteContainer"]
sorting_offset = -0.001
texture = ExtResource("3_hog83")

[node name="RimSpriteContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.082, 0)
script = ExtResource("4_1ood3")

[node name="RimNew" type="Sprite3D" parent="RimSpriteContainer"]
sorting_offset = -0.002
texture = ExtResource("5_7sn2l")

[node name="RimOld" type="Sprite3D" parent="RimSpriteContainer"]
sorting_offset = -0.003
texture = ExtResource("6_rfhdw")

[node name="wet_viz_cyl" type="CSGCylinder3D" parent="."]
radius = 1.3
height = 0.324
sides = 64
material = SubResource("StandardMaterial3D_rlgvo")
